# tesseract-rs

./: Cargo.toml  README.md
docs/: 3RD-PARTY-LICENSES.md
src/: error.rs  lib.rs  wrappers.rs
